--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentList.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentList.cshtml
@@ -62,8 +62,9 @@
             </td>
         </tr>
     </table>
-     <p>
-    </p>
+	
+	<p></p>
+	
     <table class="adminContent">
         <tr>
             <td>
@@ -81,7 +82,11 @@
                             .HtmlAttributes(new { style = "text-align:center" })
                             .HeaderHtmlAttributes(new { style = "text-align:center" });
                             columns.Bound(x => x.Id);
-                            columns.Bound(x => x.OrderId);
+							columns.Bound(x => x.OrderId)
+								.Width(80)
+								.Centered()
+								.Template(x => Html.ActionLink(T("Admin.Common.View").Text, "Edit", "Order", new { id = x.OrderId }, new { }))
+								.ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Order/Edit/") + "<#= OrderId #>\"><#= OrderId #></a>");
                             columns.Bound(x => x.TrackingNumber);
                             columns.Bound(x => x.TotalWeight);
                             columns.Bound(x => x.ShippedDate);
