missing less file

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.less
@@ -29,6 +29,7 @@
 @import "profile.less";
 @import "catalog.less";
 @import "product.less";
+@import "checkout.less";
 @import "productfilter.less";
 @import "news.less";
 @import "blog.less";
