--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -147,7 +147,7 @@
                     
                     <button class="btn btn-danger btn-large pull-right confirm-order-next-step-button" onclick="return false;" >
                         @T("Checkout.ConfirmButton")
-                        &nbsp;<i class="fa fa-caret-right"></i> 
+                        &nbsp;<i class="fa fa-fw fa-caret-right"></i> 
                     </button>
                 }
             </div>
