--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/_OrderReviewData.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/_OrderReviewData.cshtml
@@ -167,7 +167,10 @@
                 <div class="block block-bordered">
                     <div class="block-title">
                         <span>@T("Order.PaymentMethod")</span>
-                        <a class="change-checkout-data pull-right" href='@Url.Action("PaymentMethod", "Checkout")'>@T("Common.Change")</a>
+						@if (!Model.IsPaymentSelectionSkipped)
+						{
+							<a class="change-checkout-data pull-right" href='@Url.Action("PaymentMethod", "Checkout")'>@T("Common.Change")</a>
+						}
                     </div>
                     <div class="block-body">
                         @Model.PaymentMethod
