--- a/src/Presentation/SmartStore.Web/Administration/Views/Affiliate/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Affiliate/_CreateOrUpdate.cshtml
@@ -16,8 +16,9 @@
     //generate an event
     EngineContext.Current.Resolve<IEventPublisher>().Publish(new TabStripCreated(x, "affiliate-edit", this.Html, this.Model));
 })
+
 @helper TabInfo()
-    {        
+{        
     <table class="adminContent">
         @if (Model.Id > 0)
         {
@@ -51,54 +52,54 @@
         
     @Html.EditorFor(model => model.Address, "Address")
 }
+
 @helper TabCustomers()
-    { 
-        var gridPageSize = EngineContext.Current.Resolve<SmartStore.Core.Domain.Common.AdminAreaSettings>().GridPageSize;
-    
+{
     @(Html.Telerik().Grid<AffiliateModel.AffiliatedCustomerModel>()
                     .Name("customers-grid")
                     .Columns(columns =>
                     {
-                        columns.Bound(x => x.Id).Width(50);
-                        columns.Bound(x => x.Name).Width(200);
+						columns.Bound(x => x.Id);
+						columns.Bound(x => x.Email)
+							.Template(x => Html.ActionLink(x.Email, "Edit", "Customer", new { id = x.Id }, new { }))
+							.ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Customer/Edit/") + "<#= Id #>\"><#= Email #></a>");
+						columns.Bound(x => x.Username)
+							.Visible(Model.UsernamesEnabled);
+						columns.Bound(x => x.FullName);
                         columns.Bound(x => x.Id)
-                            .Width(100)
                             .Template(x => Html.ActionLink(T("Admin.Common.View").Text, "Edit", "Customer", new { id = x.Id }, new { }))
                             .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Customer/Edit/") + "<#= Id #>\">" + T("Admin.Common.View").Text + "</a>")
                             .Title(T("Admin.Common.View").Text);
                     })
-                    .Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
+                    .Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
                     .DataBinding(dataBinding =>
                     {
                         dataBinding.Ajax().Select("AffiliatedCustomerList", "Affiliate", new { affiliateId = Model.Id });
                     })
                     .EnableCustomBinding(true))
-        
 }
+
 @helper TabOrders()
-    { 
-    
-        var gridPageSize = EngineContext.Current.Resolve<SmartStore.Core.Domain.Common.AdminAreaSettings>().GridPageSize;
+{
     @(Html.Telerik().Grid<AffiliateModel.AffiliatedOrderModel>()
                     .Name("order-grid")
                     .Columns(columns =>
                     {
                         columns.Bound(x => x.Id)
-                            .Width(100)
-                            .Template(x => Html.ActionLink(T("Admin.Common.View").Text, "Edit", "Order", new { id = x.Id }, new { }))
-                            .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Order/Edit/") + "<#= Id #>\">" + T("Admin.Common.View").Text + "</a>");
-                        columns.Bound(x => x.OrderStatus).Width(200);
-                        columns.Bound(x => x.PaymentStatus).Width(200);
-                        columns.Bound(x => x.ShippingStatus).Width(200);
-                        columns.Bound(x => x.OrderTotal).Width(200);
-                        columns.Bound(x => x.CreatedOn).Width(200);
+                            .Template(x => Html.ActionLink(x.Id.ToString(), "Edit", "Order", new { id = x.Id }, new { }))
+							.ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Order/Edit/") + "<#= Id #>\"><#= Id #></a>");
+                        columns.Bound(x => x.OrderStatus);
+                        columns.Bound(x => x.PaymentStatus);
+                        columns.Bound(x => x.ShippingStatus);
+                        columns.Bound(x => x.OrderTotal)
+							.RightAlign();
+                        columns.Bound(x => x.CreatedOn);
 
                     })
-                    .Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
+                    .Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
                     .DataBinding(dataBinding =>
                     {
                         dataBinding.Ajax().Select("AffiliatedOrderList", "Affiliate", new { affiliateId = Model.Id });
                     })
                     .EnableCustomBinding(true))
-        
 }
