--- a/src/Presentation/SmartStore.Web/Administration/Views/Store/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Store/_CreateOrUpdate.cshtml
@@ -81,7 +81,7 @@
 			@Html.SmartLabelFor(model => model.Hosts)
 		</td>
 		<td class="adminData">
-			@Html.EditorFor(model => model.Hosts)
+			@Html.TextBoxFor(model => model.Hosts, new { @class = "input-large" })
 			@Html.ValidationMessageFor(model => model.Hosts)
 		</td>
 	</tr>
