--- a/src/Presentation/SmartStore.Web/Administration/Views/Theme/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Theme/List.cshtml
@@ -140,13 +140,25 @@
 									@T("Common.Active")
 								</a>
 							}
-
-							@if (theme.IsConfigurable && !isBroken)
-							{
-								<a href='@Url.Action("Configure", "Theme", new { theme = theme.Name, storeId = Model.StoreId })' class="btn tooltip-toggle pull-right@(isBroken ? " disabled" : "")" title="@T("Admin.Common.Configure")">
-									<i class="fa fa-paint-brush"></i>
-								</a>
+							
+							@if (!isBroken)
+							{	
+								<div class="btn-group pull-right">
+									if (!theme.IsMobileTheme)
+									{
+										<a href='@Url.Action("Preview", "Theme", new { theme = theme.Name, storeId = Model.StoreId })' class="btn tooltip-toggle" title="@T("Admin.Configuration.Themes.Preview")">
+											<i class="fa fa-fw fa-eye"></i>
+										</a>
+									}
+									if (theme.IsConfigurable)
+									{
+										<a href='@Url.Action("Configure", "Theme", new { theme = theme.Name, storeId = Model.StoreId })' class="btn tooltip-toggle" title="@T("Admin.Common.Configure")">
+											<i class="fa fa-fw fa-paint-brush"></i>
+										</a>
+									}
+								</div>									
 							}
+
 						</div>
 					</div>
 
