--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/catalog.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/catalog.less
@@ -70,12 +70,9 @@
 .category-description {
 	margin-bottom: 20px;
 }
-.product-list-options { 
-	// removed in V2.1
-}
 .product-list-options label { margin: 6px 7px 0 0 }
-.product-list-options .btn-group {
-	&.pull-left { margin-right: 18px }
+.product-list-options .btn-group .pull-left {
+    margin-right: 18px
 }
 .product-list-options .btn { max-width: 160px; .text-overflow(); }
 .product-list-options .product-viewmode .btn { padding-left: 8px; padding-right: 8px }
