--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/datalist.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/datalist.less
@@ -9,8 +9,6 @@
 .data-list .thumbnail .caption {
     padding: 4px;
 }
-.data-list { }
-.data-list-grid { }
 .data-list-grid .data-list-row,
 .data-list .data-list-item {
     margin-bottom: 12px;
@@ -182,18 +180,14 @@
 	}
 	.old-product-price {
 		margin: 0;
-		.prefix {
-			.smaller();
-		}
 		.price {
 			text-decoration: line-through;
 			color: #aaa;
 		}
 	}
+    .old-product-price .prefix,
+    .base-price,
 	.transport-charge {
-		.smaller();
-	}
-	.base-price {
 		.smaller();
 	}
 }
