--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shopbar.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shopbar.less
@@ -48,10 +48,6 @@
     }
 }
 
-#shopbar form {
-    
-}
-
 #shopbar .form-search {
 	margin: 0;
 	margin-right: 8px;
@@ -182,7 +178,6 @@
 	height: 0;
 	border-style: solid;
 	border-color: transparent;
-	
 	left: 50%; 
 	bottom: 0; 
 	border-top: 0;
@@ -202,7 +197,6 @@
   	bottom: -8px;
   	z-index: 1001;
 	margin-left: -7px; 
-	
 	border-bottom-color: #fff;
 }
 
@@ -280,10 +274,7 @@
 	left: auto;
 }
 
-#shopbar-flyout-cart { 
-    width: 340px;
-}
-
+#shopbar-flyout-cart,
 #shopbar-flyout-wishlist { 
     width: 340px;
 }
@@ -368,10 +359,6 @@
 		width: 160px;
 		overflow: hidden;
 		.text-overflow();
-	}
-	
-	.data .name {
-		/* */
 	}
 	
 	.data .attributes {
