--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/common.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/common.less
@@ -31,7 +31,7 @@ body.popup {
 #content {
     background-color: @bodyBackground;
     .box-shadow(~'0 0 15px rgba(0,0,0, .15), 0 10px 6px -10px rgba(0,0,0, .4)');
-    padding: 0 0;
+    padding: 0;
     z-index: 2;
 }
 
