--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/header.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/header.less
@@ -56,7 +56,7 @@
 	float: left;
 }
 
-.regional-selector li .regional-label {
+.regional-selector .regional-label {
     display: block;
 	border: 1px solid @var_ChooserBorderColor;
 	background: @var_ChooserBackgroundColor;
@@ -73,12 +73,12 @@
 	font-family: Arial, Helvetica, sans-serif;
 }
 
-.regional-selector li.selected .regional-label {
+.regional-selector .selected .regional-label {
 	font-weight: bold;
 }
 
-.regional-selector li.selected .regional-label,
-.regional-selector li .regional-label:hover {
+.regional-selector .selected .regional-label,
+.regional-selector .regional-label:hover {
 	background: @var_ChooserActiveStateColor;
 }
 
@@ -99,11 +99,11 @@
 	float: left;
 }
 
-#language-selector li .regional-label {
+#language-selector .regional-label {
 	font-size: 11px;
 }
 
-#language-selector li .flag {
+#language-selector .flag {
 	float: left;
 	margin-right: 4px;
 	margin-bottom: 2px;
@@ -114,11 +114,11 @@
 }
 
 #language-selector li:hover .flag,
-#language-selector li.selected .flag {
+#language-selector .selected .flag {
 	.opacity(100);
 }
 
-#language-selector li.selected .flag {
+#language-selector .selected .flag {
 	border-top-color: @warningText;
 }
 
