--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/pages.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/pages.less
@@ -45,7 +45,6 @@
 
 /* Compare products
 ================================================ */
-
 .compare-products-table td {
 	.small();
 }
@@ -59,25 +58,92 @@
 }
 
 
-/* TellAFriend
+/* TellAFriend & ContactUs
 ================================================ */
-
-.email-a-friend-page .personal-message{width:350px;height:150px;}
+.contact-page .enquiry,
+.email-a-friend-page .personal-message {
+    width: 350px;
+    height: 150px;
+}
 
 
 /* Search
 ================================================ */
-
 .search-page .price-from,
 .search-page .price-to {
 	width: 40px;
 }
 
-
-/* ContactUs
+/* News Styles
 ================================================ */
-
-.contact-page .enquiry {
-	width: 350px;
-	height: 150px;
+.news-list-homepage {
+	margin-top: 0;
 }
+.news-items .news-item {
+	border-bottom: 1px solid #ddd;
+	padding-bottom: 12px;
+	margin-bottom: 12px;
+}
+
+.news-items .news-title {
+	color: inherit;
+	text-decoration: none;
+	&:hover { color: #000 }
+}
+.news-items .news-date {
+	.small();
+	font-family: @baseFontFamily;
+	font-weight: 400;
+}
+.news-items .read-more {
+	display: inline-block;
+	margin-top: 12px;
+}
+.news-items .view-all {
+	font-weight: bold;
+}
+
+/* Poll & Vote Styles
+================================================ */
+.poll-item {
+	.small();
+	
+	.poll-display-text { 
+		font-weight: bold;
+		margin-bottom: 8px;
+	}
+	
+	input[type=radio] {
+		font-size: inherit;
+		line-height: inherit;
+	}
+	
+	.btn {
+		margin-top: 8px;
+	}
+}
+
+.poll-results .answer {
+	position: relative;
+	.vote-result-line {
+		margin-bottom: 3px;
+		padding-right: 18px;
+	}
+	
+	.vote-result-percent {
+		float: right;
+	}
+	
+	.progress {
+		height: 15px;
+		margin-bottom: 10px;
+	}
+}
+
+.todays-poll-box-block .poll-item {
+	float: left;
+	width: 28%;
+	margin: 0 2% 12px 2%;
+	vertical-align: top;
+}
+
