--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/variables.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/variables.less
@@ -32,30 +32,30 @@
 
 // Scaffolding
 // -------------------------
-@bodyBackground:        @var_BodyBackground; //@white;
-@textColor:             @var_TextColor; //#444;
+@bodyBackground:        @var_BodyBackground; 
+@textColor:             @var_TextColor; 
 
 
 // Links
 // -------------------------
-@linkColor:             @var_LinkColor; //#08c;
+@linkColor:             @var_LinkColor; 
 @linkColorHover:        darken(@linkColor, 15%);
 
 
 // Typography
 // -------------------------
-@sansFontFamily:        @var_SansFontFamily; //'Segoe UI', Tahoma, 'Helvetica Neue', Helvetica, Arial, 'sans-serif';
-@serifFontFamily:       @var_SerifFontFamily; //Georgia, 'Times New Roman', Times, serif;
-@monoFontFamily:        @var_MonoFontFamily; //Menlo, Monaco, Consolas, 'Courier New', monospace;
+@sansFontFamily:        @var_SansFontFamily;
+@serifFontFamily:       @var_SerifFontFamily; 
+@monoFontFamily:        @var_MonoFontFamily; 
 
-@baseFontSize:          @var_BaseFontSize; //14px;
+@baseFontSize:          @var_BaseFontSize; 
 @baseFontFamily:        @sansFontFamily;
-@baseLineHeight:        @var_BaseLineHeight; //20px;
+@baseLineHeight:        @var_BaseLineHeight; 
 @altFontFamily:         @serifFontFamily;
 
-@headingsFontFamily:    @var_HeadingsFontFamily; //'Segoe UI Semibold', 'Segoe UI', Tahoma, 'Helvetica Neue', Helvetica, Arial, 'sans-serif';
-@headingsFontWeight:    @var_HeadingsFontWeight; //600 /* Semibold doesn't get bolder anyway */
-@headingsColor:         @var_HeadingsColor; //inherit;
+@headingsFontFamily:    @var_HeadingsFontFamily; 
+@headingsFontWeight:    @var_HeadingsFontWeight; 
+@headingsColor:         @var_HeadingsColor; 
 
 
 
@@ -63,14 +63,14 @@
 // -------------------------
 // Based on 14px font-size and 20px line-height
 
-@fontSizeLarge:         @baseFontSize * 1.25; // ~18px
-@fontSizeSmall:         @baseFontSize * 0.87; // ~12px
-@fontSizeMini:          @baseFontSize * 0.8; // ~11px
+@fontSizeLarge:         @baseFontSize * 1.25;
+@fontSizeSmall:         @baseFontSize * 0.87;
+@fontSizeMini:          @baseFontSize * 0.8;
 
-@paddingDefault:		6px 12px; // 34px
-@paddingLarge:          10px 16px; // 42px
-@paddingSmall:          4px 10px;  // 30px
-@paddingMini:           2px 6px;   // 26px
+@paddingDefault:		6px 12px;
+@paddingLarge:          10px 16px;
+@paddingSmall:          4px 10px;
+@paddingMini:           2px 6px;
 
 @baseBorderRadius:      3px;
 @borderRadiusLarge:     5px;
@@ -79,10 +79,10 @@
 
 // Tables
 // -------------------------
-@tableBackground:                   @var_TableBackground; //transparent; // overall background-color
-@tableBackgroundAccent:             @var_TableBackgroundAccent; //#f9f9f9; // for striping
-@tableBackgroundHover:              @var_TableBackgroundHover; //#f5f5f5; // for hover
-@tableBorder:                       @var_TableBorder; //#ddd; // table and cell border
+@tableBackground:                   @var_TableBackground; 
+@tableBackgroundAccent:             @var_TableBackgroundAccent;
+@tableBackgroundHover:              @var_TableBackgroundHover; 
+@tableBorder:                       @var_TableBorder; 
 
 
 // Buttons
@@ -174,10 +174,6 @@
 // -------------------------
 @wellBackground:                  @var_WellBackground;
 
-/*
-@wellBackground:                  #f5f5f5;
-*/
-
 // Navbar
 // -------------------------
 @navbarCollapseWidth:             979px;
@@ -213,58 +209,13 @@
 @navbarInverseSearchBackgroundFocus:     @white;
 @navbarInverseSearchBorder:              @navbarInverseBackground;
 @navbarInverseSearchPlaceholderColor:    #ccc;
-
 @navbarInverseBrandColor:                @navbarInverseLinkColor;
-
-/*
-@navbarCollapseWidth:             979px;
-@navbarCollapseDesktopWidth:      @navbarCollapseWidth + 1;
-
-@navbarHeight:                    32px;
-@navbarBackgroundHighlight:       #fff;
-@navbarBackground:                darken(@navbarBackgroundHighlight, 9%);
-@navbarBorder:                    darken(@navbarBackground, 10%);
-
-@navbarText:                      #717171; // #777;
-@navbarLinkColor:                 #717171; // #777;
-@navbarLinkColorHover:            #1a1a1a; //@grayDark;
-@navbarLinkColorActive:           @gray;
-@navbarLinkBackgroundHover:       transparent;
-@navbarLinkBackgroundActive:      transparent; //darken(@navbarBackground, 5%);
-
-@navbarBrandColor:                @navbarLinkColor;
-
-// Inverted navbar
-@navbarInverseBackground:                #222;
-@navbarInverseBackgroundHighlight:       #666;
-@navbarInverseBorder:                    #555;
-
-@navbarInverseText:                      #dadada; //@grayLight;
-@navbarInverseLinkColor:                 #dadada; // @grayLight;
-@navbarInverseLinkColorHover:            @white;
-@navbarInverseLinkColorActive:           @navbarInverseLinkColorHover;
-@navbarInverseLinkBackgroundHover:       transparent;
-@navbarInverseLinkBackgroundActive:      transparent; // @navbarInverseBackground;
-
-@navbarInverseSearchBackground:          lighten(@navbarInverseBackground, 25%);
-@navbarInverseSearchBackgroundFocus:     @white;
-@navbarInverseSearchBorder:              @navbarInverseBackground;
-@navbarInverseSearchPlaceholderColor:    #ccc;
-
-@navbarInverseBrandColor:                @navbarInverseLinkColor;
-*/
 
 // Pagination
 // -------------------------
 @paginationBackground:                @var_PaginationBackground;
 @paginationBorder:                    @var_PaginationBorder;
 @paginationActiveBackground:          @var_PaginationActiveBackground;
-
-/*
-@paginationBackground:                #fff;
-@paginationBorder:                    #ddd;
-@paginationActiveBackground:          #f5f5f5;
-*/
 
 // Hero unit
 // -------------------------
@@ -275,20 +226,20 @@
 
 // Form states and alerts
 // -------------------------
-@warningText:             #c09853; // #404040;
-@warningBackground:       #fcf8e3; // #EEDC94
+@warningText:             #c09853; 
+@warningBackground:       #fcf8e3; 
 @warningBorder:           darken(spin(@warningBackground, -10), 3%); 
 
-@errorText:               #b94a48; // @white; 
-@errorBackground:         #f2dede; // #C43C35; 
+@errorText:               #b94a48; 
+@errorBackground:         #f2dede; 
 @errorBorder:             darken(spin(@errorBackground, -10), 3%);
 
-@successText:             #468847; // @white;
-@successBackground:       #dff0d8; // #57a957; 
+@successText:             #468847; 
+@successBackground:       #dff0d8; 
 @successBorder:           darken(spin(@successBackground, -10), 3%);
 
-@infoText:                #3a87ad; // @white;
-@infoBackground:          #d9edf7; // #339BB9;
+@infoText:                #3a87ad; 
+@infoBackground:          #d9edf7; 
 @infoBorder:              darken(spin(@infoBackground, -10), 3%);
 
 
@@ -330,23 +281,6 @@
 @gridColumnWidth768:      42px;
 @gridGutterWidth768:      20px;
 @gridRowWidth768:         (@gridColumns * @gridColumnWidth768) + (@gridGutterWidth768 * (@gridColumns - 1));
-
-/*
-@gridColumns:             24; // 12
-@gridColumnWidth:         20px; // 60px
-@gridGutterWidth:         20px;
-@gridRowWidth:            (@gridColumns * @gridColumnWidth) + (@gridGutterWidth * (@gridColumns - 1));
-
-// 1200px min
-@gridColumnWidth1200:     20px; // 70px;
-@gridGutterWidth1200:     30px;
-@gridRowWidth1200:        (@gridColumns * @gridColumnWidth1200) + (@gridGutterWidth1200 * (@gridColumns - 1));
-
-// 768px-979px
-@gridColumnWidth768:      42px;
-@gridGutterWidth768:      20px;
-@gridRowWidth768:         (@gridColumns * @gridColumnWidth768) + (@gridGutterWidth768 * (@gridColumns - 1));
-*/
 
 // Fluid grid
 // -------------------------
